updated customrer reviews

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,34 @@
 .product-information {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    margin-top: 20px;
+    margin-top: 50px;
+
+}
+
+.product-info {
+    margin-bottom: 30px;
+    margin-left: 20px;
+}
+
+.product-information img {
+    width: 450px;
+    height: 500px;
+    margin-right: 20px;
+}
+
+.live-demo {
+    margin: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    background-color: orange;
+}
+
+.live-demo:hover {
+    color: red;
+}
+
+.display-product {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
